# clean-architecture

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
scripts/: utils.sh
src/domain/: entities.py  exchange_rate.py
src/infrastructure/config/: settings.py
src/infrastructure/server/: urls.py  wsgi.py
src/infrastructure/settings/: base.py
src/interface/repositories/: exchange_rate.py
src/usecases/: exchange_rate.py
