[project]
name = "clean-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "linh",email = "trannhatlinh3103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
Django = "^3.2.5"
psycopg2 = "^2.9.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
