[project]
name = "clean-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "linh",email = "trannhatlinh3103@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.dependencies]
Django = "^3.2.5"
psycopg2 = "^2.9.1"
djangorestframework = "^3.12.4"
marshmallow = "^3.13.0"
django-redis = "^5.0.0"
pandas = "^1.3.1"
factory-boy = "^3.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
